--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Kaikai Qin"
+title                    : "Kaikai Qin (秦 凯凯)"
 description              : "Ph.D.; Postdoctoral researcher at Hangzhou Dianzi University; Research Interst: Computer Aided Geometric Design. "
 repository               : "https://kaikai-qin.github.io"
 google_scholar_stats_use_cdn : true
@@ -21,7 +21,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Kaikai Qin (秦凯凯)"
+  name             : "Kaikai Qin"
   avatar           : "images/android-chrome-512x512.png"
   bio              : "Hangzhou Dianzi University"
   location         : "Hangzhou, China"
