--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ main:
     url: "/#-honors-and-awards"
 
   - title: "Educations and Experiences"
-    url: "/#-educations"
+    url: "/#-educations-and-experiences"
 
   - title: "Invited Talks"
     url: "/#-invited-talks"
